--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,82 @@
-<h2>Homepage</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>US National Parks</title>
+    <link
+      rel="shortcut icon"
+      href="../images/fav_icon.png"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="../css/landing.css" />
+  </head>
+
+  <body>
+    <section class="hero is-info is-fullheight">
+      <div class="hero-head">
+        <nav class="navbar">
+          <div class="container">
+            <div class="navbar-brand">
+              <a class="navbar-item" href="../"> </a>
+              <span class="navbar-burger burger" data-target="navbarMenu">
+                <span></span>
+                <span></span>
+                <span></span>
+              </span>
+            </div>
+            <div id="navbarMenu" class="navbar-menu">
+              <div class="navbar-end">
+                <span class="navbar-item">
+                  <a
+                    class="button is-white is-outlined"
+                    href="http://localhost:3000/auth/login"
+                  >
+                    <span class="icon"> </span>
+                    <span>Sign in</span>
+                  </a>
+                </span>
+                <span class="navbar-item">
+                  <a
+                    class="button is-white is-outlined"
+                    href="http://localhost:3000/auth/signup"
+                  >
+                    <span class="icon"> </span>
+                    <span>Sign up</span>
+                  </a>
+                </span>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
+
+      <div class="hero-body">
+        <div class="container has-text-centered">
+          <div class="column is-6 is-offset-3">
+            <h1 class="title">Start your journey</h1>
+            <h2 class="subtitle">
+              Welcome to US National Parks. This is a unique place to discover
+              the most beautiful places in the US
+            </h2>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script async type="text/javascript" src="../js/bulma.js"></script>
+  </body>
+</html>
