--- a/views/templates/register.html
+++ b/views/templates/register.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Register - Free Bulma template</title>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/15181efa86.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
-    <link rel="stylesheet" type="text/css" href="../css/register.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/15181efa86.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="../css/register.css" />
   </head>
 
   <body>
@@ -20,24 +28,42 @@
             <div class="column left">
               <h1 class="title is-1">Super Cool Website</h1>
               <h2 class="subtitle colored is-4">Lorem ipsum dolor sit amet.</h2>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis ex deleniti aliquam tempora libero excepturi vero soluta odio optio sed.</p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Corporis ex deleniti aliquam tempora libero excepturi vero
+                soluta odio optio sed.
+              </p>
             </div>
             <div class="column right has-text-centered">
               <h1 class="title is-4">Sign up today</h1>
-              <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+              <p class="description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit
+              </p>
               <form>
                 <div class="field">
                   <div class="control">
-                    <input class="input is-medium" type="text" placeholder="Name">
+                    <input
+                      class="input is-medium"
+                      type="text"
+                      placeholder="Name"
+                    />
                   </div>
                 </div>
 
                 <div class="field">
                   <div class="control">
-                    <input class="input is-medium" type="email" placeholder="Email">
+                    <input
+                      class="input is-medium"
+                      type="email"
+                      placeholder="Email"
+                    />
                   </div>
                 </div>
-                <button class="button is-block is-primary is-fullwidth is-medium">Submit</button>
+                <button
+                  class="button is-block is-primary is-fullwidth is-medium"
+                >
+                  Submit
+                </button>
                 <br />
                 <small><em>Lorem ipsum dolor sit amet consectetur.</em></small>
               </form>
@@ -45,22 +71,26 @@
           </div>
         </div>
         <div class="column is-8 is-offset-2">
-          <br>
+          <br />
           <nav class="level">
             <div class="level-left">
               <div class="level-item">
                 <span class="icon">
                   <i class="fab fa-twitter"></i>
-                </span> &emsp;
+                </span>
+                &emsp;
                 <span class="icon">
                   <i class="fab fa-facebook"></i>
-                </span> &emsp;
+                </span>
+                &emsp;
                 <span class="icon">
                   <i class="fab fa-instagram"></i>
-                </span> &emsp;
+                </span>
+                &emsp;
                 <span class="icon">
                   <i class="fab fa-github"></i>
-                </span> &emsp;
+                </span>
+                &emsp;
                 <span class="icon">
                   <i class="fas fa-envelope"></i>
                 </span>
@@ -78,7 +108,7 @@
   </body>
   <style>
     :root {
-      --brandColor: hsl(166, 67%, 51%);
+      --brandColor: hsl(199, 71%, 75%);
       --background: rgb(247, 247, 247);
       --textDark: hsla(0, 0%, 0%, 0.66);
       --textLight: hsla(0, 0%, 0%, 0.33);
@@ -156,7 +186,5 @@
       color: var(--textLight);
       margin-right: 1rem;
     }
-
   </style>
-
 </html>
