show by Id setup

--- a/views/parks.ejs
+++ b/views/parks.ejs
@@ -10,6 +10,8 @@
     <% for( let i = 0; i < parks.length; i++ ) { %> <% let a = parks[i]; %> <% a
     = a.toJSON() %>
     <p><%= a.name %></p>
+    <p><%= a.city %></p>
+    <p><%= a.img %></p>
     <% }%>
     <hr />
   </body>
