--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,166 +1,164 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Register - Free Bulma template</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/15181efa86.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css"
-    />
-    <link rel="stylesheet" type="text/css" href="../css/register.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sign up page</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: font-family;
+        font-size: font-size;
+        background-size: 200% 100% !important;
+        animation: move 10s ease infinite;
+        transform: translate3d(0, 0, 0);
+        background-image: url("https://edsitement.neh.gov/sites/default/files/styles/teaser/public/2018-07/crater-lake-crpd.jpg?itok=gkc8FZZs");
+
+        height: 100vh;
+      }
+
+      .user {
+        width: 90%;
+        max-width: 340px;
+        margin: 10vh auto;
+      }
+
+      .user__header {
+        text-align: center;
+        opacity: 0;
+        transform: translate3d(0, 500px, 0);
+        animation: arrive 500ms ease-in-out 0.7s forwards;
+      }
+
+      .user__title {
+        font-size: font-size;
+        margin-bottom: -10px;
+        font-weight: 500;
+        color: white;
+      }
+
+      .form {
+        margin-top: 40px;
+        border-radius: 6px;
+        overflow: hidden;
+        opacity: 0;
+        transform: translate3d(0, 500px, 0);
+        animation: arrive 500ms ease-in-out 0.9s forwards;
+      }
+
+      .form--no {
+        animation: NO 1s ease-in-out;
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+      }
+
+      .form__input {
+        display: block;
+        width: 100%;
+        padding: 20px;
+        font-family: font-family;
+        -webkit-appearance: none;
+        border: 0;
+        outline: 0;
+        transition: 0.3s;
+      }
+
+      .btn {
+        display: block;
+        width: 100%;
+        padding: 20px;
+        font-family: font-family;
+        -webkit-appearance: none;
+        outline: 0;
+        border: 0;
+        color: white;
+        background: color-primary;
+        transition: 0.3s;
+      }
+
+      @keyframes NO {
+        from,
+        to {
+          -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+        }
+
+        10%,
+        30%,
+        50%,
+        70%,
+        90% {
+          -webkit-transform: translate3d(-10px, 0, 0);
+          transform: translate3d(-10px, 0, 0);
+        }
+
+        20%,
+        40%,
+        60%,
+        80% {
+          -webkit-transform: translate3d(10px, 0, 0);
+          transform: translate3d(10px, 0, 0);
+        }
+      }
+
+      @keyframes arrive {
+        0% {
+          opacity: 0;
+          transform: translate3d(0, 50px, 0);
+        }
+
+        100% {
+          opacity: 1;
+          transform: translate3d(0, 0, 0);
+        }
+      }
+
+      @keyframes move {
+        0% {
+          background-position: 0 0;
+        }
+
+        50% {
+          background-position: 100% 0;
+        }
+
+        100% {
+          background-position: 0 0;
+        }
+      }
+    </style>
   </head>
-
   <body>
-    <section class="container">
-      <div class="columns is-multiline">
-        <div class="column is-8 is-offset-2 register">
-          <div class="columns">
-            <div class="column right has-text-centered">
-              <form action="/auth/signup" method="POST">
-                <label for="new-email">Email</label>
-                <input id="new-email" type="email" name="email" required />
+    <div class="user">
+      <header class="user__header">
+        <img
+          src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3219/logo.svg"
+          alt=""
+        />
+        <h1 class="user__title">Please sign-up to see the content</h1>
+      </header>
 
-                <label for="new-name">Name</label>
-                <input id="new-name" type="text" name="name" required />
-
-                <label for="new-password">Password</label>
-                <input
-                  id="new-password"
-                  type="password"
-                  name="password"
-                  required
-                />
-
-                <input type="submit" value="Sign up" />
-              </form>
-            </div>
-          </div>
+      <form form action="/auth/signup" method="POST" class="form">
+        <div class="form__group">
+          <input type="text" placeholder="Username" class="form__input" />
         </div>
-        <div class="column is-8 is-offset-2">
-          <br />
-          <nav class="level">
-            <div class="level-left">
-              <div class="level-item">
-                <span class="icon">
-                  <i class="fab fa-twitter"></i>
-                </span>
-                &emsp;
-                <span class="icon">
-                  <i class="fab fa-facebook"></i>
-                </span>
-                &emsp;
-                <span class="icon">
-                  <i class="fab fa-instagram"></i>
-                </span>
-                &emsp;
-                <span class="icon">
-                  <i class="fab fa-github"></i>
-                </span>
-                &emsp;
-                <span class="icon">
-                  <i class="fas fa-envelope"></i>
-                </span>
-              </div>
-            </div>
-            <div class="level-right">
-              <small class="level-item" style="color: var(--textLight)">
-                &copy;
-              </small>
-            </div>
-          </nav>
+
+        <div class="form__group">
+          <input type="email" placeholder="Email" class="form__input" />
         </div>
-      </div>
-    </section>
+
+        <div class="form__group">
+          <input type="password" placeholder="Password" class="form__input" />
+        </div>
+
+        <button class="btn" type="button">Register</button>
+      </form>
+    </div>
   </body>
-  <style>
-    :root {
-      --brandColor: hsl(199, 75%, 68%);
-      --background: rgb(247, 247, 247);
-      --textDark: hsla(0, 0%, 0%, 0.66);
-      --textLight: hsla(0, 0%, 0%, 0.33);
-    }
-
-    body {
-      background: var(--background);
-      height: 100vh;
-      color: var(--textDark);
-    }
-
-    .field:not(:last-child) {
-      margin-bottom: 1rem;
-    }
-
-    .register {
-      margin-top: 10rem;
-      background: white;
-      border-radius: 10px;
-    }
-
-    .left,
-    .right {
-      padding: 4.5rem;
-    }
-
-    .left {
-      border-right: 5px solid var(--background);
-    }
-
-    .left .title {
-      font-weight: 800;
-      letter-spacing: -2px;
-    }
-
-    .left .colored {
-      color: var(--brandColor);
-      font-weight: 500;
-      margin-top: 1rem !important;
-      letter-spacing: -1px;
-    }
-
-    .left p {
-      color: var(--textLight);
-      font-size: 1.15rem;
-    }
-
-    .right .title {
-      font-weight: 800;
-      letter-spacing: -1px;
-    }
-
-    .right .description {
-      margin-top: 1rem;
-      margin-bottom: 1rem !important;
-      color: var(--textLight);
-      font-size: 1.15rem;
-    }
-
-    .right small {
-      color: var(--textLight);
-    }
-
-    input {
-      font-size: 1rem;
-    }
-
-    input:focus {
-      border-color: var(--brandColor) !important;
-      box-shadow: 0 0 0 1px var(--brandColor) !important;
-    }
-
-    .fab,
-    .fas {
-      color: var(--textLight);
-      margin-right: 1rem;
-    }
-  </style>
 </html>
