--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,164 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign up page</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
+<form action="/auth/signup" method="POST">
+  <label for="new-email">Email</label>
+  <input id="new-email" type="email" name="email" required />
 
-      body {
-        font-family: font-family;
-        font-size: font-size;
-        background-size: 200% 100% !important;
-        animation: move 10s ease infinite;
-        transform: translate3d(0, 0, 0);
-        background-image: url("https://edsitement.neh.gov/sites/default/files/styles/teaser/public/2018-07/crater-lake-crpd.jpg?itok=gkc8FZZs");
+  <label for="new-name">Name</label>
+  <input id="new-name" type="text" name="name" required />
 
-        height: 100vh;
-      }
+  <label for="new-password">Password</label>
+  <input id="new-password" type="password" name="password" required />
 
-      .user {
-        width: 90%;
-        max-width: 340px;
-        margin: 10vh auto;
-      }
-
-      .user__header {
-        text-align: center;
-        opacity: 0;
-        transform: translate3d(0, 500px, 0);
-        animation: arrive 500ms ease-in-out 0.7s forwards;
-      }
-
-      .user__title {
-        font-size: font-size;
-        margin-bottom: -10px;
-        font-weight: 500;
-        color: white;
-      }
-
-      .form {
-        margin-top: 40px;
-        border-radius: 6px;
-        overflow: hidden;
-        opacity: 0;
-        transform: translate3d(0, 500px, 0);
-        animation: arrive 500ms ease-in-out 0.9s forwards;
-      }
-
-      .form--no {
-        animation: NO 1s ease-in-out;
-        opacity: 1;
-        transform: translate3d(0, 0, 0);
-      }
-
-      .form__input {
-        display: block;
-        width: 100%;
-        padding: 20px;
-        font-family: font-family;
-        -webkit-appearance: none;
-        border: 0;
-        outline: 0;
-        transition: 0.3s;
-      }
-
-      .btn {
-        display: block;
-        width: 100%;
-        padding: 20px;
-        font-family: font-family;
-        -webkit-appearance: none;
-        outline: 0;
-        border: 0;
-        color: white;
-        background: color-primary;
-        transition: 0.3s;
-      }
-
-      @keyframes NO {
-        from,
-        to {
-          -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-        }
-
-        10%,
-        30%,
-        50%,
-        70%,
-        90% {
-          -webkit-transform: translate3d(-10px, 0, 0);
-          transform: translate3d(-10px, 0, 0);
-        }
-
-        20%,
-        40%,
-        60%,
-        80% {
-          -webkit-transform: translate3d(10px, 0, 0);
-          transform: translate3d(10px, 0, 0);
-        }
-      }
-
-      @keyframes arrive {
-        0% {
-          opacity: 0;
-          transform: translate3d(0, 50px, 0);
-        }
-
-        100% {
-          opacity: 1;
-          transform: translate3d(0, 0, 0);
-        }
-      }
-
-      @keyframes move {
-        0% {
-          background-position: 0 0;
-        }
-
-        50% {
-          background-position: 100% 0;
-        }
-
-        100% {
-          background-position: 0 0;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="user">
-      <header class="user__header">
-        <img
-          src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3219/logo.svg"
-          alt=""
-        />
-        <h1 class="user__title">Please sign-up to see the content</h1>
-      </header>
-
-      <form form action="/auth/signup" method="POST" class="form">
-        <div class="form__group">
-          <input type="text" placeholder="Username" class="form__input" />
-        </div>
-
-        <div class="form__group">
-          <input type="email" placeholder="Email" class="form__input" />
-        </div>
-
-        <div class="form__group">
-          <input type="password" placeholder="Password" class="form__input" />
-        </div>
-
-        <button class="btn" type="button">Register</button>
-      </form>
-    </div>
-  </body>
-</html>
+  <input type="submit" value="Sign up" />
+</form>
