--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>US National Parks</title>
+    <title>Landing - Free Bulma template</title>
     <link
       rel="shortcut icon"
       href="../images/fav_icon.png"
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700"
       rel="stylesheet"
     />
-
+    <!-- Bulma Version 0.9.0-->
     <link
       rel="stylesheet"
       href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css"
@@ -31,32 +31,41 @@
       <div class="hero-head">
         <nav class="navbar">
           <div class="container">
-            <div class="navbar-brand">
-              <a class="navbar-item" href="../"> </a>
-              <span class="navbar-burger burger" data-target="navbarMenu">
-                <span></span>
-                <span></span>
-                <span></span>
-              </span>
-            </div>
             <div id="navbarMenu" class="navbar-menu">
               <div class="navbar-end">
                 <span class="navbar-item">
-                  <a
-                    class="button is-white is-outlined"
-                    href="http://localhost:3000/auth/login"
-                  >
-                    <span class="icon"> </span>
-                    <span>Sign in</span>
+                  <a class="button is-white is-outlined" href="#">
+                    <span class="icon">
+                      <i class="fa fa-home"></i>
+                    </span>
+                    <span>Home</span>
+                  </a>
+                </span>
+                <span class="navbar-item">
+                  <a class="button is-white is-outlined" href="#">
+                    <span class="icon">
+                      <i class="fa fa-superpowers"></i>
+                    </span>
+                    <span>Examples</span>
+                  </a>
+                </span>
+                <span class="navbar-item">
+                  <a class="button is-white is-outlined" href="#">
+                    <span class="icon">
+                      <i class="fa fa-book"></i>
+                    </span>
+                    <span>Documentation</span>
                   </a>
                 </span>
                 <span class="navbar-item">
                   <a
                     class="button is-white is-outlined"
-                    href="http://localhost:3000/auth/signup"
+                    href="https://github.com/BulmaTemplates/bulma-templates/blob/master/templates/landing.html"
                   >
-                    <span class="icon"> </span>
-                    <span>Sign up</span>
+                    <span class="icon">
+                      <i class="fa fa-github"></i>
+                    </span>
+                    <span>View Source</span>
                   </a>
                 </span>
               </div>
@@ -68,10 +77,11 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <div class="column is-6 is-offset-3">
-            <h1 class="title">Start your journey</h1>
+            <h1 class="title">Coming Soon</h1>
             <h2 class="subtitle">
-              Welcome to US National Parks. This is a unique place to discover
-              the most beautiful places in the US
+              $this is the best software platform for running an internet
+              business. We handle billions of dollars every year for
+              forward-thinking businesses around the world.
             </h2>
           </div>
         </div>
