--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,38 +34,29 @@
             <div id="navbarMenu" class="navbar-menu">
               <div class="navbar-end">
                 <span class="navbar-item">
-                  <a class="button is-white is-outlined" href="#">
-                    <span class="icon">
-                      <i class="fa fa-home"></i>
-                    </span>
-                    <span>Home</span>
-                  </a>
-                </span>
-                <span class="navbar-item">
-                  <a class="button is-white is-outlined" href="#">
-                    <span class="icon">
-                      <i class="fa fa-superpowers"></i>
-                    </span>
-                    <span>Examples</span>
-                  </a>
-                </span>
-                <span class="navbar-item">
-                  <a class="button is-white is-outlined" href="#">
-                    <span class="icon">
-                      <i class="fa fa-book"></i>
-                    </span>
-                    <span>Documentation</span>
+                  <a
+                    class="button is-white is-outlined"
+                    href="http://localhost:3000/parks"
+                  >
+                    <span>Parks</span>
                   </a>
                 </span>
                 <span class="navbar-item">
                   <a
                     class="button is-white is-outlined"
-                    href="https://github.com/BulmaTemplates/bulma-templates/blob/master/templates/landing.html"
+                    href="http://localhost:3000/trails"
                   >
-                    <span class="icon">
-                      <i class="fa fa-github"></i>
-                    </span>
-                    <span>View Source</span>
+                    <span>Trails</span>
+                  </a>
+                </span>
+                <span class="navbar-item">
+                  <a class="button is-white is-outlined" href="#">
+                    <span>States</span>
+                  </a>
+                </span>
+                <span class="navbar-item">
+                  <a class="button is-white is-outlined" href="/favorites">
+                    <span>Favorites</span>
                   </a>
                 </span>
               </div>
@@ -77,11 +68,10 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <div class="column is-6 is-offset-3">
-            <h1 class="title">Coming Soon</h1>
+            <h1 class="title">Start your journey</h1>
             <h2 class="subtitle">
-              $this is the best software platform for running an internet
-              business. We handle billions of dollars every year for
-              forward-thinking businesses around the world.
+              Welcome to US National Parks. This is a unique place to discover
+              the most beautiful places in the US
             </h2>
           </div>
         </div>
