--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,3 +1,121 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      body {
+        background-image: url("https://wallpaperbat.com/img/108881-simple-nature-wallpaper-top-free-simple-nature-background.jpg");
+        color: #5e5e5e;
+        font: 400 87.5%/1.5em "Open Sans", sans-serif;
+      }
+
+      /* Form Layout */
+      .form-wrapper {
+        background: #cbe7f8;
+        margin: 3em auto;
+        padding: 0 1em;
+        max-width: 370px;
+        text-align: center;
+      }
+
+      h1 {
+        text-align: center;
+        padding: 1em 0;
+      }
+
+      form {
+        padding: 0 1.5em;
+      }
+
+      .form-item {
+        margin-bottom: 0.75em;
+        width: 100%;
+      }
+
+      .form-item input {
+        background: #fafafa;
+        border: none;
+        border-bottom: 2px solid #e9e9e9;
+        color: #666;
+        font-family: "Open Sans", sans-serif;
+        font-size: 1em;
+        height: 50px;
+        transition: border-color 0.3s;
+        width: 100%;
+      }
+
+      .form-item input:focus {
+        border-bottom: 2px solid #c0c0c0;
+        outline: none;
+      }
+
+      .button-panel {
+        margin: 2em 0 0;
+        width: 100%;
+      }
+
+      .button-panel .button {
+        background: #9993eb;
+        border: none;
+        color: #fff;
+        cursor: pointer;
+        height: 50px;
+        font-family: "Open Sans", sans-serif;
+        font-size: 1.2em;
+        letter-spacing: 0.05em;
+        text-align: center;
+        text-transform: uppercase;
+        transition: background 0.3s ease-in-out;
+        width: 100%;
+      }
+
+      .button:hover {
+        background: #468ddf;
+      }
+
+      .form-footer {
+        font-size: 1em;
+        padding: 2em 0;
+        text-align: center;
+      }
+
+      .form-footer a {
+        color: #8c8c8c;
+        text-decoration: none;
+        transition: border-color 0.3s;
+      }
+
+      .form-footer a:hover {
+        border-bottom: 1px dotted #8c8c8c;
+      }
+    </style>
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="form-wrapper">
+      <h1>Sign In</h1>
+      <form action="/auth/login" method="POST">
+        <div class="form-item">
+          <label for="email"></label>
+          <input type="email" name="email" required="required" placeholder="Email Address"></input>
+        </div>
+        <div class="form-item">
+          <label for="password"></label>
+          <input type="password" name="password" required="required" placeholder="Password"></input>
+        </div>
+        <div class="button-panel">
+          <input type="submit" class="button" title="Sign In" value="Sign In"></input>
+        </div>
+      </form>
+      <div class="form-footer">
+        <p><a href="http://localhost:3000/auth/signup">Create an account</a></p>
+      </div>
+    </div>
+  </body>
+</html>
+
 <form action="/auth/login" method="POST">
   <label for="auth-email">Email</label>
   <input id="auth-email" type="email" name="email" required />
