--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,62 @@
-<h2>Profile Page</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <style>
+      body .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        max-width: 300px;
+        margin: auto;
+        text-align: center;
+        font-family: arial;
+      }
 
-<h3>Welcome to your PROFILE</h3>
+      .title {
+        color: grey;
+        font-size: 18px;
+      }
 
-<p>Id: <%= id %></p>
-<p>Name: <%= name %></p>
-<p>Email: <%= email %></p>
+      button {
+        border: none;
+        outline: 0;
+        display: inline-block;
+        padding: 8px;
+        color: white;
+        background-color: #000;
+        text-align: center;
+        cursor: pointer;
+        width: 100%;
+        font-size: 18px;
+      }
+
+      a {
+        text-decoration: none;
+        font-size: 22px;
+        color: black;
+      }
+
+      button:hover,
+      a:hover {
+        opacity: 0.7;
+      }
+    </style>
+  </head>
+  <body>
+    <h2 style="text-align: center">
+      Hello, <%= name %>! Welcome to your profile!
+    </h2>
+
+    <div class="card">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR49eAQUkxb2rnPkLDszNsSjEbkxRIKnLPGmA&usqp=CAU"
+        alt="Park"
+        style="width: 100%"
+      />
+
+      <div style="margin: 24px 0"></div>
+    </div>
+  </body>
+</html>
