--- a/views/trails/index.ejs
+++ b/views/trails/index.ejs
@@ -22,6 +22,11 @@
         <link rel='stylesheet' href='https://unpkg.com/bulma@0.9.0/css/bulma.min.css'>
         <link rel="stylesheet" href="../css/kanban.css">
         <script src="https://kit.fontawesome.com/7dc3015a44.js" crossorigin="anonymous"></script>
+        <style>
+            body{
+                background-image: url('https://media.istockphoto.com/videos/blue-and-light-blue-gradient-background-beautiful-color-loop-material-video-id1277748423?b=1&k=20&m=1277748423&s=640x640&h=5xme0BhYS8gxSzXg9m2dXVjb24YtvXcVwyZRR0Xw0WU=');
+            }
+        </style>
     </head>
     <body>
 
