--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,6 +57,9 @@
                 <span class="navbar-item">
                   <a class="button is-white is-outlined" href="/favorites">
                     <span>Favorites</span>
+                    <span class="navbar-item">
+                      <a class="button is-white is-outlined" href="http://localhost:3000/profile">
+                        <span>Profile</span>
                   </a>
                 </span>
               </div>
