--- a/views/trails/index.ejs
+++ b/views/trails/index.ejs
@@ -181,11 +181,20 @@
 </div>
 </section>
 <div class="columns is-mobile is-centered">
-<div class="column is-half is-narrow"></div>
+<div class="column is-half is-narrow">
+    <div class="content has-text-centered">
+        <div class="control level-item">
+          <a href="http://localhost:3000/trails/new">
+            <div class="tags has-addons">
+              
+              <span class="tag is-info">Create Trail</span>
+            </div>
+          </a>
+        </div>
+      </div>
 </div>
-<footer>
+</div>
 
-</footer>
 <script src="../js/bulma.js"></script>
 </body>
 </html>
