--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,7 +7,7 @@
     />
     <style>
       body {
-        background-image: url("https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-02.jpg");
+        background-image: url("https://wallpaperaccess.com/full/2000539.jpg");
       }
       body .card {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
