--- a/views/parks.ejs
+++ b/views/parks.ejs
@@ -318,9 +318,10 @@
                   
                 </figure>
               </div>
-             
+             <div>
                 <p class="title is-4">About the Park</p>
-                
+                <a href="/trails/edit/<%= parks.id %>">Add to Favorites</a>
+              </div>
               </div>
             </div>
             <div class="content">
