--- a/views/showall.ejs
+++ b/views/showall.ejs
@@ -14,6 +14,8 @@
       <p><%=index.weatherInfo %></p>
 
       <a href="<%=index.img %>"><p><%=index.img %></p></a>
+
+      <a href="/trails/edit/<%= index.id %>"><b>Add to Favorites</b></a>
     </div>
     <% }) %>
   </div>
