--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
                   </a>
                 </span>
                 <span class="navbar-item">
-                  <a class="button is-white is-outlined" href="#">
+                  <a class="button is-white is-outlined" href="http://localhost:3000/states">
                     <span>States</span>
                   </a>
                 </span>
