--- a/views/showall.ejs
+++ b/views/showall.ejs
@@ -7,7 +7,7 @@
 
     <% parks.forEach(index =>{ %>
     <div class="individual-results">
-      <h4><a href="parks/<%= index.name %>"><%=index.name%></a></h4>
+      <h4><a href="states/<%= index.name %>"><%=index.name%></a></h4>
       <p><%=index.about %></p>
       <p><%=index.city %></p>
       <p><b><%=index.state %></b></p>
