--- a/views/states/show.ejs
+++ b/views/states/show.ejs
@@ -11,14 +11,10 @@
       }
     </style>
   </head>
-
   <body>
-    <h1><%= trail.name %></h1>
-    <h2><%= trail.length %></h2>
-    <h3><%= trail.difficulty %></h3>
-    <a href="/trails/edit/<%= trail.id %>">Edit Trail</a>
-    <br />
-    <br />
-    <a href="/favorite/index/<%= trail.id %>">Add to the favorites</a>
+    <body>
+      <h1>Number of parks in the State</h1>
+      <h1><%= state.numberOfParks %></h1>
+    </body>
   </body>
 </html>
