--- a/views/trails/edit.ejs
+++ b/views/trails/edit.ejs
@@ -1,5 +1,61 @@
-<form method="POST" action="/trails/<%= trail.id %>/?_method=PUT">
-  <label for="name">Name</label>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+        background-image: url('https://149364069.v2.pressablecdn.com/wp-content/uploads/2016/11/free-blue-background.jpg');
+      }
+    
+      * {
+        box-sizing: border-box;
+      }
+
+      input[type="text"],
+      select,
+      textarea {
+        width: 100%;
+        padding: 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        margin-top: 6px;
+        margin-bottom: 16px;
+        resize: vertical;
+      }
+
+      input[type="submit"] {
+        background-color: #62a9c5;
+        color: white;
+        padding: 12px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        
+      }
+
+      input[type="submit"]:hover {
+        background-color: #639bcf;
+      }
+
+      .container {
+        border-radius: 5px;
+        background-color: #b0cde6;
+        padding: 20px;
+      }
+      h3{
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <h3>Edit Trail</h3>
+
+    <div class="container">
+      <form method="POST" action="/trails/<%= trail.id %>/?_method=PUT">
+        <label for="name">Name</label>
   <input type="text" name="name" value="<%= trail.name%>" />
 
   <label for="length">Length</label>
@@ -12,6 +68,12 @@
     name="difficulty"
     value="<%= trail.difficulty%>"
   />
+       
 
-  <input type="submit" />
-</form>
+       </textarea>
+
+        <input type="submit" value="Submit" />
+      </form>
+    </div>
+  </body>
+</html>
