--- a/views/states/show.ejs
+++ b/views/states/show.ejs
@@ -9,12 +9,17 @@
       body {
         background-image: url("https://cdn.wallpapersafari.com/43/90/1Lp92s.png");
       }
+      .show {
+        text-align: center;
+      }
     </style>
   </head>
   <body>
     <body>
-      <h1>Number of parks in the State</h1>
-      <h1><%= state.numberOfParks %></h1>
+      <div class="show">
+        <h1>Number of parks in the State</h1>
+        <h1><%= state.numberOfParks %></h1>
+      </div>
     </body>
   </body>
 </html>
