--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                 <span class="navbar-item">
                   <a
                     class="button is-white is-outlined"
-                    href="http://localhost:3000/parks"
+                    href=/parks"
                   >
                     <span>Parks</span>
                   </a>
@@ -44,13 +44,13 @@
                 <span class="navbar-item">
                   <a
                     class="button is-white is-outlined"
-                    href="http://localhost:3000/trails"
+                    href="/trails"
                   >
                     <span>Trails</span>
                   </a>
                 </span>
                 <span class="navbar-item">
-                  <a class="button is-white is-outlined" href="http://localhost:3000/states">
+                  <a class="button is-white is-outlined" href="/states">
                     <span>States</span>
                   </a>
                 </span>
@@ -59,7 +59,7 @@
                     <span>Favorites</span>
                     
                     <span class="navbar-item">
-                      <a class="button is-white is-outlined" href="http://localhost:3000/profile">
+                      <a class="button is-white is-outlined" href="/profile">
                         <span>Profile</span>
                   </a>
                 </span>
